# TrianglesIntersection

./: CMakeLists.txt  README.md
src/: BelkinD_interval.h  BelkinD_point.h  BelkinD_triangle.cpp  BelkinD_triangle.h  BelkinD_vector.h  main.cpp
